make it work - now with lineage.registry

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,7 +19,8 @@ auto-checkout = *
 always-checkout = true    
 
 [sources]
-collective.lineage = svn https://svn.plone.org/svn/collective/collective.lineage/trunk/
+collective.lineage = git git@github.com:collective/collective.lineage.git 
+lineage.registry = git git@github.com:collective/lineage.registry.git
 
 [instance]
 recipe = plone.recipe.zope2instance
@@ -31,11 +32,10 @@ testthemes =
 
 eggs =
     Pillow
-    Plone
     lineage.themeselection
-    ${:testthemes}
     plone.app.debugtoolbar
     plone.reload
+    ${:testthemes}
 
 zcml = 
     lineage.themeselection
