--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-index = http://pypi.bluedynamics.eu
+#index = http://pypi.bluedynamics.eu
 find-links +=
     http://effbot.org/downloads/
 parts = 
@@ -20,7 +20,6 @@ always-checkout = true
 
 [sources]
 collective.lineage = git git@github.com:collective/collective.lineage.git 
-lineage.registry = git git@github.com:collective/lineage.registry.git
 
 [instance]
 recipe = plone.recipe.zope2instance
